Ass Problem desc in bib file

--- a/LaTeX report/bibliography.bib
+++ b/LaTeX report/bibliography.bib
@@ -25,4 +25,10 @@ year = {2006}
   year = "2016"
 }
 
+@misc{ProblemDesc,
+	author = "NTNU",
+	title = "TTK4135 Optimization and Control Helicopter Lab",
+	year = "2016"
+}
+
 
