--- a/LaTeX report/main.tex
+++ b/LaTeX report/main.tex
@@ -2,7 +2,7 @@
 \usepackage{preamble}
 
 \title{OptReg lab report}
-\author{Group ??\\Vemund Rogne\\Jørgen Haaland}
+\author{Students:\\490947\\Jørgen Haaland}
 
 \begin{document}
 
