--- a/LaTeX report/content/task_10_4.tex
+++ b/LaTeX report/content/task_10_4.tex
@@ -187,14 +187,14 @@ A simple force analysis will show that the states are not decoupled as described
 		\node [above, red] at (-1, 1) {$ F_1 $};
 		\draw[->, dashed, blue] (0,0) --(0, 1);
 		\node [above, blue] at (0, 1) {$ F_{1y} $};
-		\draw[<-, dashed, violet] (0,0) --(-1, 0);
+		\draw[->, dashed, violet] (0,0) --(-1, 0);
 		\node [left, violet] at (-1, 0) {$ F_{1x} $};
 		
 		\draw [->, red] (3, 3) -- (2, 4);
 		\node [above, red] at (2, 4) {$ F_2 $};
 		\draw[->, dashed, blue] (3,3) --(3, 4);
 		\node [above, blue] at (3, 4) {$ F_{2y} $};
-		\draw[<-, dashed, violet] (3,3) --(2, 3);
+		\draw[->, dashed, violet] (3,3) --(2, 3);
 		\node [left, violet] at (2, 3) {$ F_{2x} $};
 		
 		\draw[dashed] (1.5, 1.5) -- (2.5, 1.5);
